[metadata]
name = carbspec
version = attr: carbspec.__version__
author = Oscar Branson
author_email = ob266@cam.ac.uk
description = Tools for calculating pH and Alkalinity from spectrophotometric data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oscarbranson/carbspec
license = 'MIT'
keywords = science, chemistry, oceanography, carbon
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research

[options]
zip_safe = True
include_package_data = True

[options.package_data]
carbspec = resources/*